# deps

./: Makefile  README.md  build.sh
.github/workflows/: nightly.yaml
32/lib/: libmsgpack.la  libmsgpackc.la  libuv.la
etc/luarocks/: config-5.1.lua
lib/: libuv.la
lib/pkgconfig/: libuv.pc  luajit.pc
src/gperf-stamp/: gperf-custominfo.txt
src/libtermkey/: Makefile  termkey.h  termkey.pc.in
src/libtermkey-stamp/: download-libtermkey.cmake  extract-libtermkey.cmake  libtermkey-custominfo.txt  libtermkey-patch-info.txt  libtermkey-urlinfo.txt
src/libuv/: CMakeLists.txt
src/libuv-stamp/: download-libuv.cmake  extract-libuv.cmake  libuv-custominfo.txt  libuv-urlinfo.txt
src/libvterm/: Makefile  vterm.pc.in
src/libvterm-stamp/: download-libvterm.cmake  extract-libvterm.cmake  libvterm-custominfo.txt  libvterm-patch-info.txt  libvterm-urlinfo.txt
src/lpeg-stamp/: download-lpeg.cmake  extract-lpeg.cmake  lpeg-patch-info.txt  lpeg-urlinfo.txt
src/lua-compat-5.3-stamp/: download-lua-compat-5.3.cmake  extract-lua-compat-5.3.cmake  lua-compat-5.3-custominfo.txt  lua-compat-5.3-urlinfo.txt
src/lua_compat53-stamp/: download-lua_compat53.cmake  extract-lua_compat53.cmake  lua_compat53-urlinfo.txt
src/luajit/: .relver
src/luajit-stamp/: download-luajit.cmake  extract-luajit.cmake  luajit-custominfo.txt  luajit-urlinfo.txt
src/luarocks/: install.bat
src/luarocks-stamp/: download-luarocks.cmake  extract-luarocks.cmake  luarocks-custominfo.txt  luarocks-urlinfo.txt
src/luv-stamp/: download-luv.cmake  extract-luv.cmake  luv-urlinfo.txt
src/luv-static-stamp/: download-luv-static.cmake  extract-luv-static.cmake  (+2 more)
src/luv/src/: dns.c
src/treesitter-vim/: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json
src/treesitter-vim/.github/workflows/: fuzz.yml  main.yml
src/treesitter-vim/bindings/go/: binding.go
src/treesitter-vim/bindings/node/: binding.cc
src/treesitter-vim/bindings/python/tree_sitter_vim/: __init__.py  binding.c
src/treesitter-vim/bindings/rust/: build.rs
src/treesitter-vim/bindings/swift/TreeSitterVim/: vim.h
src/treesitter-vim/rules/: command.js
src/treesitter-vim/src/: grammar.json  scanner.c
src/treesitter-vim/test/corpus/: expressions.txt
src/treesitter-vim/test/highlight/: command_modifiers.vim  commands.vim  filetype_statement.vim  highlight_statement.vim  let_statement.vim  loops.vim
src/unibilium/: .gitignore  .travis.yml  CMakeLists.txt  Changes  Makefile  Makefile.in  README.md  configure.ac  unibilium.c  uniutil.c
src/unibilium/doc/: unibi_from_term.pod
src/unibilium/t/: new-extended-format-static_screen.c
(+478 files in other folders)
