[package]
name = "tree-sitter-vim"
description = "Vinscript grammar for the tree-sitter parsing library"
version = "0.3.0"
keywords = ["incremental", "parsing", "nepvim", "vimscript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/neovim/tree-sitter-vim"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "^0.20.7"

[build-dependencies]
cc = "1.0"
