[package]
name = "tree-sitter-vim"
description = "Vimscript grammar for tree-sitter"
version = "0.4.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "query"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-vim"
authors = ["Thomas Vigouroux"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "keywords.js",
  "rules/*",
  "queries/*",
  "src/*"
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "^1.0.89"
